Revert "Quick fix for dark mode"
This reverts commit 7154b5798230cdc0941793cee1de73edb0287f17.

--- a/app/javascript/stylesheets/fpc/_global.scss
+++ b/app/javascript/stylesheets/fpc/_global.scss
@@ -182,14 +182,9 @@
     }
   }
 
-  .card-title,
-  .card-body .table {
-    color: black !important;
-  }
-
   .table {
-    --bs-table-color: white !important;
-    --bs-table-striped-color: white !important;
+    --bs-table-color: var(--fpc-text-color);
+    --bs-table-striped-color: var(--fpc-text-color);
     --bs-table-striped-bg: var(--fpc-bright-background);
 
     // For "manual stripes" for instance like in brand clusters
